# AluminumTech

./: .gitignore  ALTech.hpp  CMakeLists.txt  LICENSE  README.md
ALTech/: Application.cpp  Application.hpp  Core.hpp
ALTech/Core/: Application.cpp  Core.hpp  Debug.hpp  EntryPoint.hpp  Log.cpp  Log.hpp
Samples/: CMakeLists.txt
Samples/Src/: SampleApp.cpp
